# GDCS-AI-HACKATHON

./: .gitignore  README.md
core/backend/: pyproject.toml
core/backend/src/: cleaner.py  connectors.py  consts.py  extractor.py  gptconnector.py  gui.py  main.py  model.py  paragraphAdapter.py  paragraphsExtractionPipeline.py  vectordb.py
core/backend/src/database/: model.py  vectordb.py
core/backend/src/gui/: app.py  home.py
core/backend/src/paragraphs_extraction_pipeline/: paragraphs_extraction_pipeline.py
core/backend/src/paragraphs_extraction_pipeline/utils/: cleaner.py  paragraphs_adapter.py  pdf2text.py
core/backend/src/paragraphs_ingester/: paragraphs_ingester.py
core/backend/src/paragraphs_ingester/utils/: cleaner.py
core/backend/src/quizzer/: quizzer.py
core/backend/src/quizzer/utils/: random_context_creator.py
core/backend/src/resources/: extracted_paragraphs.csv  pippo.csv  quiz.json  quiz_example.json
core/backend/src/resources/prompts/: generate_questions.txt  quiz_json_example.txt
core/backend/src/resources/uploaded_pdfs/: Chatbot.md  Egon Sacro Graal.md  stepChatbot.txt
core/backend/src/routes/: routes.py
core/backend/src/tests/: test_quizzer.py  test_random_context_creator.py  test_vectordb.py
core/frontend/: README.md  angular.json  home.html  package-lock.json  package.json
core/frontend/src/: index.html
core/frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
core/frontend/src/app/choose-topic/: choose-topic.component.html  choose-topic.component.spec.ts  (+1 more)
(+9 files in other folders)
