[tool.poetry]
name = "+gerry"
version = "0.1.0"
description = "Learning tool enhanced with LLMs"
authors = ["Bonvini, Calabrò, Gennaro, Pagano"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.23.2"
pymupdf = "^1.24.2"
nicegui = "^1.4.22"
chromadb = "^0.4.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
